11.3.007 (2012-08-02)
	- Arabic language was updated.

11.3.006 (2012-08-01)
	- OMR bulk importer now creates a log file on the cache folder.

11.3.005 (2012-07-31)
	- A bulk importer for OMR data was added.
	- OMR import algorithm waas fixed and improved.

11.3.004 (2012-07-26)
	- The TCPDF library was updated.

11.3.003 (2012-07-25)
	- CSS files were updated.
	- The TCPDF library was updated.

11.3.002 (2012-07-25)
	- The TCPDF library was updated.
	- A problem related to the QRCode size on offline PDF test was fixed.

11.3.001 (2012-07-23)
	- On Test Editor is now possible to select all type of questions at once.
	- The favicon.ico file was updated.
	- The TCPDF library was updated.

11.3.000 (2012-06-07)
	- The encryption algorithm for passwords was improved and is NOT compatible with the old method.
	- If you are upgrading and you do not want to manually reset all passwords, set the K_STRONG_PASSWORD_ENCRYPTION constant to FALSE on shared/config/tce_config.php
	- The default password for admin is 1234 and the correspondent encoding is on install/dbdata.sql file.
	- TCPDF Library was updated.

------------------------------------------------------------

11.2.032 (2012-06-06)
	- TCPDF Library was updated to fix a bug introduced on the previous version.

11.2.031 (2012-06-05)
	- Support for external authentication systems were improved.
	- TCPDF Library was updated.

11.2.030 (2012-04-30)
	- Romanian Language was updated.
	- TCPDF Library was updated.

11.2.029 (2012-04-27)
	- A "division by zero" bug was fixed.

11.2.028 (2012-04-25)
	- TCPDF library was updated.
	- Arabic Language was updated.

11.2.027 (2012-04-19)
	- TCPDF library was updated.
	- Division by zero problem was fixed on tce_show_allresults_users.php
	- A user selection/search popup utility was added (click on the [...] button next to each user select box).
	- Constant K_PASSWORD_RESET was added on shared/config/tce_config.php to enable password reset feature.